[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Escaped/Escaped.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Pixellari.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="Escaped" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -28.0
margin_top = -41.0
margin_right = 1952.0
margin_bottom = 1112.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
margin_left = 1056.0
margin_top = 86.0
margin_right = 1580.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 1 )
text = "YOU HAVE SWIPED"

[node name="Label2" type="Label" parent="Node2D"]
margin_left = 995.0
margin_top = 168.0
margin_right = 1622.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 1 )
text = "THE WRONG PAINTING"

[node name="Label3" type="Label" parent="Node2D"]
margin_left = 933.0
margin_top = 333.0
margin_right = 1695.0
margin_bottom = 393.0
custom_fonts/font = SubResource( 1 )
text = "WITH A SIMILARITY SCORE"

[node name="seconds" type="Label" parent="Node2D"]
margin_left = 1036.0
margin_top = 546.0
margin_right = 1541.0
margin_bottom = 606.0
custom_fonts/font = SubResource( 1 )
text = "IN 6000 SECONDS"

[node name="score" type="Label" parent="Node2D"]
margin_left = 1192.0
margin_top = 440.0
margin_right = 1374.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 1 )
text = "GOOD"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 488, 475 )

[node name="upload" type="Button" parent="."]
margin_left = 1139.0
margin_top = 795.0
margin_right = 1470.0
margin_bottom = 884.0
text = "Upload Score + Image"

[node name="done" type="Label" parent="."]
visible = false
margin_left = 1267.0
margin_top = 823.0
margin_right = 1456.0
margin_bottom = 888.0
custom_fonts/font = SubResource( 2 )
text = "Done
"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 1078.0
margin_top = 684.0
margin_right = 1527.0
margin_bottom = 758.0
custom_fonts/font = SubResource( 3 )
align = 1
max_length = 60
placeholder_text = "USERNAME"
placeholder_alpha = 0.778

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="ColorRect2" type="ColorRect" parent="Credits"]
margin_left = -46.0
margin_top = -34.0
margin_right = 1934.0
margin_bottom = 1119.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Label2" type="Label" parent="Credits"]
margin_left = 752.0
margin_top = 32.0
margin_right = 1379.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "CREDITS"

[node name="Label3" type="Label" parent="Credits"]
margin_left = 589.0
margin_top = 159.0
margin_right = 1216.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 2 )
text = "Developed by Niv3k_El_Pato"

[node name="Label4" type="Label" parent="Credits"]
margin_left = 592.0
margin_top = 206.0
margin_right = 1219.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 2 )
text = "Audio by Ann Cinnamon"

[node name="Label5" type="Label" parent="Credits"]
margin_left = 543.0
margin_top = 318.0
margin_right = 1170.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 2 )
text = "With the non-help of twitch chat:"

[node name="Label6" type="Label" parent="Credits"]
margin_left = 577.0
margin_top = 371.0
margin_right = 1204.0
margin_bottom = 912.0
custom_fonts/font = SubResource( 2 )
text = "cssavlad
isayrodcan
danirod_
raupulus
quasocaliente0
codesectarian quack quack
saintcaleuche
shmebulok101
hellsing2030
vm_Jorge_
afor_digital
jemma1202
Lam277
dinodev16
ElSecuestraPapitas
owlnai
dannywolfmx2"

[node name="Button" type="Button" parent="."]
margin_left = 823.0
margin_top = 975.0
margin_right = 1055.0
margin_bottom = 1051.0
text = "Credits"

[node name="Button2" type="Button" parent="."]
margin_left = 1640.0
margin_top = 961.0
margin_right = 1882.0
margin_bottom = 1058.0
text = "NEXT LEVEL"

[connection signal="pressed" from="upload" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_next_pressed"]
